--- a/.textlintrc
+++ b/.textlintrc
@@ -2,5 +2,8 @@
     "rules": {
         "spellcheck-tech-word": true,
         "preset-ja-technical-writing": true
+    },
+    "filters": {
+        "comments": true
     }
 }
